@@ -1,1 +1,3 @@
+include $(top_srcdir)/aminclude.am
+
 SUBDIRS = src include t doc
